[Android] Making the touch handles aware of DIP changes

Instead of caching the DIP scale at creation, query the scale from the
view.

Bug: 851634
Change-Id: Iaacec8f649fcb0da6aa01ec0859b29f8cf1281b3
Reviewed-on: https://chromium-review.googlesource.com/1099045
Reviewed-by: Pedro Amaral <amaralp@chromium.org>
Commit-Queue: Aldo Culquicondor <acondor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566978}
Former-commit-id: 884e1a192542df36c44c32dfb1665e5467793120